tests/configuration/invalid_environment/invalid_value/configuration/settings_dict.py
from selva.configuration import environment as env

env.get_dict("INVALID")
